--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-color: #f8f8f8;
 }
 
 /* === 導覽列 === */
@@ -93,22 +94,22 @@ body {
 .content-monitor {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-bottom: 40px;
 }
 
 .monitor-left {
   width: 800px;
-  height: 800px;
+  height: 700px;
   display: grid;
   grid-template-columns: 1fr 2fr;
-  gap: 10px;
+  gap: 20px;
 }
 
 .map-small {
   display: grid;
   grid-template-rows: repeat(3, 1fr);
-  gap: 10px;
+  gap: 20px;
 }
 
 .legendInfo {
@@ -120,7 +121,8 @@ body {
 #mapKM,
 #mapPH,
 #mapTW {
-  background-color: #ffffff; /* 設置為白色背景 */
+  background-color: #ffffff;
+  /* 設置為白色背景 */
   border: 1px solid #f0f0f0;
   border-radius: 5px;
   width: 100%;
@@ -163,6 +165,7 @@ body {
   0% {
     background-position: -400px 0;
   }
+
   100% {
     background-position: 400px 0;
   }
@@ -180,6 +183,7 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1.5rem;
+  justify-items: center
 }
 
 .grid-card {
