--- a/static/style.css
+++ b/static/style.css
@@ -120,14 +120,23 @@ body {
 
 #mapLC,
 #mapKM,
-#mapPH,
-#mapTW {
+#mapPH {
   background-color: #ffffff;
   border: 1px solid #f0f0f0;
   border-radius: 8px;
   width: 100%;
   height: 100%;
   min-height: 200px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+#mapTW {
+  background-color: #ffffff;
+  border: 1px solid #f0f0f0;
+  border-radius: 8px;
+  width: 100%;
+  height: 100%;
+  min-height: 700px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -260,6 +269,30 @@ body {
     align-items: center;
     gap: 40px;
   }
+
+  .monitor-left {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    gap: 0px;
+  }
+
+  .map-small {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 10px;
+    margin-top: 20px;
+  }
+
+  .map-small .map-wrapper {
+    flex: 1;
+  }
+
+  .map-wrapper.map-main {
+    order: -1;
+  }
 }
 
 @media (max-width: 768px) {
@@ -271,5 +304,34 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 40px;
+  }
+
+  .monitor-left {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    gap: 0px;
+  }
+
+  .map-small {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 10px;
+    margin-top: 20px;
+  }
+
+  .map-small .map-wrapper {
+    flex: 1;
+  }
+
+  .map-wrapper.map-main {
+    order: -1;
+  }
+
+  .map-name {
+    font-size: 14px;
+    padding: 3px 8px;
   }
 }
